--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "i18n": "^0.8.3",
     "jade": "~1.11.0",
     "nodemon": "^1.18.3",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "nodemailer": "^5.1.1"
   }
 }
