--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "devDependencies": {
     "axios": "^0.19.0",
     "i18n": "^0.8.3",
-    "jade": "~1.11.0",
     "node-http-proxy": "^0.2.3",
     "nodemailer": "^5.1.1",
     "nodemon": "^1.18.3",
-    "pug": "^2.0.4"
+    "@handlebars/allow-prototype-access": "^1.0.3",
+    "express-handlebars": "^4.0.4",
+    "handlebars": "^4.7.6",
+    "node-sass-middleware": "0.11.0"
   }
 }
