--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "dev": "webpack-dev-server --open --config ./build/webpack.dev.conf.js",
+    "build": "webpack --config ./build/webpack.build.conf.js",
     "start": "nodemon ./bin/www"
   },
+  "browserslist": [
+    "> 1%",
+    "last 3 version"
+  ],
   "dependencies": {
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
@@ -18,14 +24,31 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "axios": "^0.19.0",
-    "i18n": "^0.8.3",
-    "node-http-proxy": "^0.2.3",
-    "nodemailer": "^5.1.1",
-    "nodemon": "^1.18.3",
     "@handlebars/allow-prototype-access": "^1.0.3",
+    "axios": "^0.19.0",
     "express-handlebars": "^4.0.4",
     "handlebars": "^4.7.6",
-    "node-sass-middleware": "0.11.0"
+    "i18n": "^0.8.3",
+    "node-http-proxy": "^0.2.3",
+    "node-sass-middleware": "0.11.0",
+    "nodemailer": "^5.1.1",
+    "nodemon": "^1.18.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "autoprefixer": "^9.7.3",
+    "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.0",
+    "cssnano": "^4.1.10",
+    "file-loader": "^5.0.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.1.2"
   }
 }
