--- a/package.json
+++ b/package.json
@@ -24,31 +24,32 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "@handlebars/allow-prototype-access": "^1.0.3",
-    "axios": "^0.19.0",
-    "express-handlebars": "^4.0.4",
-    "handlebars": "^4.7.6",
-    "i18n": "^0.8.3",
-    "node-http-proxy": "^0.2.3",
-    "node-sass-middleware": "0.11.0",
-    "nodemailer": "^5.1.1",
-    "nodemon": "^1.18.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-merge": "^4.2.2",
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "@handlebars/allow-prototype-access": "^1.0.3",
     "autoprefixer": "^9.7.3",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.0",
     "cssnano": "^4.1.10",
+    "express-handlebars": "^4.0.4",
     "file-loader": "^5.0.2",
+    "handlebars": "^4.7.6",
+    "i18n": "^0.8.3",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-http-proxy": "^0.2.3",
     "node-sass": "^4.13.0",
+    "node-sass-middleware": "0.11.0",
+    "nodemailer": "^5.1.1",
+    "nodemon": "^1.18.3",
     "postcss-loader": "^3.0.0",
+    "resolve-url-loader": "^3.1.1",
     "sass-loader": "^8.0.0",
-    "style-loader": "^1.1.2"
+    "style-loader": "^1.1.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
   }
 }
