--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "handlebars-loader": "^1.7.1",
     "http-errors": "~1.6.2",
     "http-proxy": "^1.17.0",
     "morgan": "~1.9.0",
@@ -30,12 +30,15 @@
     "autoprefixer": "^9.7.3",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.0",
     "cssnano": "^4.1.10",
+    "express": "^4.16.4",
     "express-handlebars": "^4.0.4",
     "file-loader": "^5.0.2",
     "handlebars": "^4.7.6",
+    "html-webpack-plugin": "^4.3.0",
     "i18n": "^0.8.3",
     "mini-css-extract-plugin": "^0.9.0",
     "node-http-proxy": "^0.2.3",
@@ -49,6 +52,7 @@
     "style-loader": "^1.1.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
+    "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2"
   }
