--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start1"        : "npm-run-all --parallel watch:server watch:build",
+    "start"        : "npm-run-all --parallel watch:server watch:build",
     "watch:build"  : "webpack",
     "watch:server" : "nodemon --watch views --watch src ./bin/www"
   },
